--- a/app/views/create_egreso.scala.html
+++ b/app/views/create_egreso.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import models.forms.EgresoForm
 @import java.util
-@(egresoForm: Form[EgresoForm], tipos: List[String])
+@(egresoForm: Form[EgresoForm], tipos: List[String], bAlumnos: List[String], bColaboradores: List[String], bTerceros: List[String], bSocios: List[String], proyectos: List[String], partidas: List[String])
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,40 +26,36 @@
                 <div class="col-md-6">
                 @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
                     @helper.CSRF.formField
-                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary") { Volver atrás } </p>
                 }
                 </div>
                 <div class="col-md-6" align="right">
                 @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
                     @helper.CSRF.formField
-                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
-                }
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                @b4.vertical.form(action = routes.EgresoController.createEgreso()) { implicit vfc =>
-                    @helper.CSRF.formField @b4.date(egresoForm("fecha"), '_label -> "Fecha") @b4.text(egresoForm("importe"), '_label -> "Importe") @b4.text(egresoForm("beneficiarioColaboradores"), '_label -> "Beneficiario colaboradores") @b4.text(egresoForm("tipoBeneficiario"), '_label -> "Tipo beneficiario") @b4.text(egresoForm("proyecto"), '_label -> "Proyecto") @b4.text(egresoForm("Creador"), '_label -> "Creador") @b4.select(egresoForm("validado"), '_label -> "Validado") { implicit values => <optgroup>
-                    @b4.selectOption("opt_1-1", "Si") @b4.selectOption("opt_1-2", "No")
-                </optgroup>
-                }
-                }
-                </div>
-                <div class="col-md-6">
-                @b4.vertical.form(action = routes.EgresoController.createEgreso()) { implicit vfc =>
-                    @helper.CSRF.formField
-                    @b4.text(egresoForm("concepto"), '_label -> "Concepto")
-                    @b4.text(egresoForm("beneficiarioAlumnos"), '_label -> "Beneficiario alumnos")
-                    @b4.text(egresoForm("beneficiarioTerceros"), '_label -> "Beneficiario terceros")
-                    @b4.text(egresoForm("partida"), '_label -> "Partida")
-                    @b4.text(egresoForm("responsable"), '_label -> "Responsable")
-                    @b4.text(egresoForm("observaciones"), '_label -> "Observaciones")
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary") { Cerrar sesión } </p>
                 }
                 </div>
             </div>
             @b4.vertical.form(action = routes.EgresoController.createEgreso()) { implicit vfc =>
-                @helper.CSRF.formField
-            <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir egreso } </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        @helper.CSRF.formField
+                        @b4.date(egresoForm("fecha"), '_label -> "Fecha")
+                        @b4.number(egresoForm("importe"), '_label -> "Importe (L)", 'step -> "0.01")
+                        @b4.select(egresoForm("nombreProyecto"), options = options(proyectos), '_label -> "Proyecto")
+                        @b4.select(egresoForm("partida"), options = options(partidas), '_label -> "Partida")
+                        @b4.text(egresoForm("concepto"), '_label -> "Concepto")
+                    </div>
+                    <div class="col-md-6">
+                        @b4.select(egresoForm("tipoBeneficiario"), options = options(tipos), '_label -> "Tipo beneficiario")
+                        @b4.select(egresoForm("nombreBeneficiarioAlumno"), options = options(bAlumnos), '_label -> "Beneficiario alumnos")
+                        @b4.select(egresoForm("nombreBeneficiarioTercero"), options = options(bTerceros), '_label -> "Beneficiario terceros")
+                        @b4.select(egresoForm("nombreBeneficiarioSocio"), options = options(bSocios), '_label -> "Beneficiario Socio")
+                        @b4.select(egresoForm("nombreBeneficiarioColaborador"), options = options(bColaboradores), '_label -> "Beneficiario colaboradores")
+                        @b4.text(egresoForm("observaciones"), '_label -> "Observaciones")
+                    </div>
+                </div>
+                <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir egreso } </div>
             }
         </div>
     </body>
