--- a/app/views/create_ingreso.scala.html
+++ b/app/views/create_ingreso.scala.html
@@ -26,38 +26,32 @@
                 <div class="col-md-6">
                 @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
                     @helper.CSRF.formField
-                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary") { Volver atrás } </p>
                 }
                 </div>
                 <div class="col-md-6" align="right">
                 @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
                     @helper.CSRF.formField
-                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
-                }
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                @b4.vertical.form(action = routes.IngresoController.createIngreso()) { implicit vfc =>
-                    @helper.CSRF.formField
-                    @b4.date(ingresoForm("fecha"), '_label -> "Fecha")
-                    @b4.text(ingresoForm("concepto"), '_label -> "Concepto")
-                    @b4.text(ingresoForm("importe"), '_label -> "Importe")
-                    @b4.text(ingresoForm("emisor"), '_label -> "Emisor")
-                }
-                </div>
-                <div class="col-md-6">
-                @b4.vertical.form(action = routes.IngresoController.createIngreso()) { implicit vfc =>
-                    @helper.CSRF.formField
-                    @b4.text(ingresoForm("observaciones"), '_label -> "Observaciones")
-                    @b4.text(ingresoForm("nombrePartida"), '_label -> "Partida")
-                    @b4.text(ingresoForm("nombreProyecto"), '_label -> "Proyecto")
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary") { Cerrar sesión } </p>
                 }
                 </div>
             </div>
             @b4.vertical.form(action = routes.IngresoController.createIngreso()) { implicit vfc =>
-                @helper.CSRF.formField
-            <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir ingreso } </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        @helper.CSRF.formField
+                        @b4.date(ingresoForm("fecha"), '_label -> "Fecha")
+                        @b4.text(ingresoForm("concepto"), '_label -> "Concepto")
+                        @b4.text(ingresoForm("importe"), '_label -> "Importe")
+                        @b4.text(ingresoForm("emisor"), '_label -> "Emisor")
+                    </div>
+                    <div class="col-md-6">
+                        @b4.text(ingresoForm("observaciones"), '_label -> "Observaciones")
+                        @b4.select(ingresoForm("nombrePartida"), options = options(partidas), '_label -> "Partida")
+                        @b4.select(ingresoForm("nombreProyecto"), options = options(proyectos), '_label -> "Proyecto")
+                    </div>
+                </div>
+                <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir ingreso } </div>
             }
         </div>
     </body>
